minor fix on implementation